--- a/producer/requirements.txt
+++ b/producer/requirements.txt
@@ -1,3 +1,33 @@
-requests==2.31.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+arro3-core==0.6.5
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+delta-spark==3.1.0
+deltalake==1.4.2
+Deprecated==1.3.1
+duckdb==1.4.4
+fastapi==0.129.0
+h11==0.16.0
+idna==3.11
+importlib_metadata==8.7.1
 kafka-python-ng==2.2.2
+numpy==2.4.2
+pandas==3.0.0
+py4j==0.10.9.7
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyspark==3.5.8
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+requests==2.31.0
+six==1.17.0
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.41.0
+wrapt==2.1.1
+zipp==3.23.0
