--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - --advertise-kafka-addr internal://redpanda:9092,external://localhost:19092
     ports:
       - "19092:19092"
+      - "9644:9644"
+    volumes:
+      - redpanda-0:/var/lib/redpanda/data
     networks:
       - data-network
     healthcheck:
@@ -36,32 +39,42 @@ services:
     networks:
       - data-network
 
-  spark-master:
-    image: apache/spark:3.5.0
-    container_name: spark-master
-    user: root
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
+  mongo:
+    image: mongo:6.0
+    container_name: crypto-mongo
+    restart: always
     ports:
-      - "8090:8080"
-      - "7077:7077"
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+    volumes:
+      - mongo_data:/data/db
     networks:
       - data-network
 
-  spark-worker:
-    image: apache/spark:3.5.0
-    container_name: spark-worker
-    user: root
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
-    depends_on:
-      - spark-master
+  mongo-express:
+    image: mongo-express
+    container_name: crypto-mongo-admin
+    restart: always
+    ports:
+      - "8081:8081"
     environment:
-      - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=1G
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: password
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
+      ME_CONFIG_MONGODB_SERVER: mongo 
+      ME_CONFIG_MONGODB_PORT: 27017
     networks:
       - data-network
-    volumes:
-      - ./notebooks:/opt/spark/work-dir/notebooks
+    depends_on:
+      - mongo
 
 networks:
   data-network:
     driver: bridge
+
+volumes:
+  mongo_data: null
+  redpanda-0: null
